@@ -33,13 +33,9 @@
 Please wait...
 Object flavors initialized...
 Server is running version 3140
-26 Jul 19:45:55: Welcome DarkGod=rich@theforest.demon.co.uk (0.0.0.0/0)
-26 Jul 19:47:38: Goodbye DarkGod=rich@theforest.demon.co.uk ("Killed by divine wrath")
-Illegal console command from 0.0.0.0.
-Illegal console command from 0.0.0.0.
-Valid console command from 0.0.0.0.
-Valid console command from 0.0.0.0.
-Valid console command from 0.0.0.0.
-Valid console command from 0.0.0.0.
+27 Jul 01:22:58: Welcome DarkGod=root@theforest.demon.co.uk (0.0.0.0/0)
+27 Jul 01:23:18: Welcome Evileye=rich@theforest.demon.co.uk (0.0.0.0/0)
+27 Jul 01:23:38: Goodbye Evileye=rich@theforest.demon.co.uk ("Killed by divine wrath")
+27 Jul 01:23:51: Goodbye DarkGod=root@theforest.demon.co.uk ("Committed suicide")
 Valid console command from 0.0.0.0.
 Shutting down.
